force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <inlineHelpText>Australian Business Number</inlineHelpText>
    <label>ABN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>