force-app/main/default/objects/Account/fields/Account_Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Unique__c</fullName>
    <formula>Name + &quot; - &quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Unique</label>
    <type>Text</type>
</CustomField>