force-app/main/default/objects/Account/fields/AccountFullID__c.field-meta.xml
<CustomField>
    <fullName>AccountFullID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountFullID</label>
    <type>Text</type>
</CustomField>