force-app/main/default/objects/Account/fields/AGE_CAMP_TEST__c.field-meta.xml
<CustomField>
    <fullName>AGE_CAMP_TEST__c</fullName>
    <description>Testing Date Field requirements</description>
    <label>AGE CAMP TEST</label>
    <type>Date</type>
</CustomField>