force-app/main/default/objects/Account/fields/Aged_Camp__c.field-meta.xml
<CustomField>
    <fullName>Aged_Camp__c</fullName>
    <label>Aged Camp</label>
    <type>Date</type>
</CustomField>