force-app/main/default/objects/Account/fields/Aged_Camps_12__c.field-meta.xml
<CustomField>
    <fullName>Aged_Camps_12__c</fullName>
    <label>Aged Camps &lt; 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>