force-app/main/default/objects/Account/fields/Aged_Camps_1_2__c.field-meta.xml
<CustomField>
    <fullName>Aged_Camps_1_2__c</fullName>
    <label>Aged Camps 1 - 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>