force-app/main/default/objects/Account/fields/Alternative_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Company_Name__c</fullName>
    <inlineHelpText>This company is also known as ..</inlineHelpText>
    <label>Alternative Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>