force-app/main/default/objects/Account/fields/AnnotationText__c.field-meta.xml
<CustomField>
    <fullName>AnnotationText__c</fullName>
    <inlineHelpText>Update this text field to add information in the Important section above on a record. Please include date and name for relevance.</inlineHelpText>
    <label>AnnotationText</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>