force-app/main/default/objects/Account/fields/ATSIC__c.field-meta.xml
<CustomField>
    <fullName>ATSIC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures families who have identified as Aboriginal Australian or Torres Strait Islander</description>
    <inlineHelpText>Does this family identify as Aboriginal Australian or Torres Strait Islander?</inlineHelpText>
    <label>ATSIC</label>
    <type>Checkbox</type>
</CustomField>