force-app/main/default/objects/Account/fields/Attended_Program_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Attended_Program_This_Year__c</fullName>
    <formula>if (   ISBLANK(Last_Rec_Program_Attended__c ) , if(year(  Puppet_Show__c  ) == year(today()) , &quot;Attended&quot; ,&quot;Not Yet Attended&quot;),  
if(year( Last_Rec_Program_Attended__c ) == year(today()) , &quot;Attended&quot; ,if(year(  Puppet_Show__c  ) == year(today()) , &quot;Attended&quot; ,&quot;Not Yet Attended&quot;))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended Program This Year</label>
    <type>Text</type>
</CustomField>