force-app/main/default/objects/Account/fields/Bereaved__c.field-meta.xml
<CustomField>
    <fullName>Bereaved__c</fullName>
    <description>Date field populated by workflow for Priority score</description>
    <label>Bereaved</label>
    <type>Date</type>
</CustomField>