force-app/main/default/objects/Account/fields/BillingLat__c.field-meta.xml
<CustomField>
    <fullName>BillingLat__c</fullName>
    <formula>BillingLatitude</formula>
    <label>BillingLat</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>