force-app/main/default/objects/Account/fields/BillingLong__c.field-meta.xml
<CustomField>
    <fullName>BillingLong__c</fullName>
    <formula>BillingLongitude</formula>
    <label>BillingLong</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>