force-app/main/default/objects/Account/fields/BPay_Number__c.field-meta.xml
<CustomField>
    <fullName>BPay_Number__c</fullName>
    <label>BPay Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>