force-app/main/default/objects/Account/fields/Cancer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Journey__c</fullName>
    <label>Cancer Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Treatment</fullName>
            </value>
            <value>
                <fullName>Off Treatment</fullName>
            </value>
            <value>
                <fullName>Relapsed</fullName>
            </value>
            <value>
                <fullName>Palliative</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Transitioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>