force-app/main/default/objects/Account/fields/Cancer_Journey_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Journey_Comments__c</fullName>
    <label>Social Worker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>