force-app/main/default/objects/Account/fields/Cancer_Type_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Type_Comment__c</fullName>
    <label>Diagnosis Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>