force-app/main/default/objects/Account/fields/Capacity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Rating__c</fullName>
    <label>Capacity Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>