force-app/main/default/objects/Account/fields/Child_Aware_of_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Child_Aware_of_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Aware of Cancer</label>
    <type>Checkbox</type>
</CustomField>