force-app/main/default/objects/Account/fields/Children_under_13__c.field-meta.xml
<CustomField>
    <fullName>Children_under_13__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Children under 13, this value if populated automatically via trigger.</description>
    <label>Children under 13</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>