force-app/main/default/objects/Account/fields/Community_Home_Page_Text__c.field-meta.xml
<CustomField>
    <fullName>Community_Home_Page_Text__c</fullName>
    <label>Community Home Page Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>