force-app/main/default/objects/Account/fields/Constituent_Types__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Types__c</fullName>
    <label>Constituent Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bequest Administrator</fullName>
            </value>
            <value>
                <fullName>Bequest Giver</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Foundation - Private</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>National Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
            <value>
                <fullName>Primary School</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>WorkPlaceGiving</fullName>
            </value>
            <value>
                <fullName>Former WorkPlaceGiving</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>