force-app/main/default/objects/Account/fields/Corporate_Contact_Us_Message__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Contact_Us_Message__c</fullName>
    <label>Corporate Contact Us Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>