force-app/main/default/objects/Account/fields/Corporate_Volunteer_Signup_Message__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Volunteer_Signup_Message__c</fullName>
    <label>Corporate Volunteer Signup Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>