force-app/main/default/objects/Account/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <description>Date field populated by workflow for Priority score</description>
    <label>Deceased</label>
    <type>Date</type>
</CustomField>