force-app/main/default/objects/Account/fields/Do_Not_Accept_Donations_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Accept_Donations_Reasons__c</fullName>
    <description>used in conjunction to the &quot;Do Not Accept Donations&quot; Check box</description>
    <inlineHelpText>Why are we not accepting donations from this account?</inlineHelpText>
    <label>Do Not Accept Donations Reasons</label>
    <type>TextArea</type>
</CustomField>