force-app/main/default/objects/Account/fields/Do_Not_Add_AP__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Add_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Add AP</label>
    <type>Checkbox</type>
</CustomField>