force-app/main/default/objects/Account/fields/Do_Not_SMS__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>