force-app/main/default/objects/Account/fields/Dual_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Dual_Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Mailing</label>
    <type>Checkbox</type>
</CustomField>