force-app/main/default/objects/Account/fields/Eligible_for_Respite_General__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Respite_General__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Respite General</label>
    <type>Checkbox</type>
</CustomField>