force-app/main/default/objects/Account/fields/Eligible_for_Respite_Salamander__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Respite_Salamander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Respite Salamander</label>
    <type>Checkbox</type>
</CustomField>