force-app/main/default/objects/Account/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>