force-app/main/default/objects/Account/fields/End_Date_Treatment_Eligability__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Treatment_Eligability__c</fullName>
    <formula>if (ISNULL(On_Treatment__c), Diagnosis_Date__c + 365*5, if ( Diagnosis_Date__c +365*5 &gt;  On_Treatment__c + 365*3,  Diagnosis_Date__c +365*5, On_Treatment__c + 365*3))</formula>
    <inlineHelpText>Either 3 years from last treatment or 5 years from diagnosis whichever one is largest</inlineHelpText>
    <label>End Date Treatment Eligability</label>
    <type>Date</type>
</CustomField>