force-app/main/default/objects/Account/fields/Exclude_from_2022_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_2022_Annual_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Form stack link to checkboc for yes/no into 2022 AR Report:
GIK, WPG, Corporate Accounts</description>
    <label>Exclude from 2022 Annual Report</label>
    <type>Checkbox</type>
</CustomField>