force-app/main/default/objects/Account/fields/Family_Camp__c.field-meta.xml
<CustomField>
    <fullName>Family_Camp__c</fullName>
    <label>Family Camp</label>
    <type>Date</type>
</CustomField>