force-app/main/default/objects/Account/fields/Family_Camp_Prioirty__c.field-meta.xml
<CustomField>
    <fullName>Family_Camp_Prioirty__c</fullName>
    <formula>if ( Today() - Diagnosis_Date__c &gt;= 365, if(isblank(Last_Engagement_Date__c), 400, if(Today() - Last_Engagement_Date__c &gt;= 1095, 200,0)),0 ) +
if (  ISNULL(Family_Camp__c ),0, if (Today() -  Family_Camp__c  &lt;= 365, -200, if(today() - Family_Camp__c &lt;= 1095, -100, 0)))
+ Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Camp Prioirty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>