force-app/main/default/objects/Account/fields/Family_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Family_Engaged__c</fullName>
    <formula>if ( isblank(Last_Engagement_Date__c), if(today() -  Start_Date__c &lt;= 365, &quot;Never Engaged - New Family&quot;, &quot;Never Engaged - Existing Family&quot;),
if(Today() -  Last_Engagement_Date__c  &lt;= 1095,  if(Today() -  Last_Engagement_Date__c  &lt;= 365, &quot;Currently Engaged&quot;, &quot;Recently Engaged&quot;), &quot;Disengaged&quot;))</formula>
    <inlineHelpText>Has family attended a program in last 3 years, or had puppet show.</inlineHelpText>
    <label>Family Engaged</label>
    <type>Text</type>
</CustomField>