force-app/main/default/objects/Account/fields/Family_Experience__c.field-meta.xml
<CustomField>
    <fullName>Family_Experience__c</fullName>
    <label>Family Experience</label>
    <type>Date</type>
</CustomField>