force-app/main/default/objects/Account/fields/Family_Experience_Priority__c.field-meta.xml
<CustomField>
    <fullName>Family_Experience_Priority__c</fullName>
    <formula>if ( Today() - Diagnosis_Date__c  &gt;= 365, if(isblank(Last_Engagement_Date__c), 400, if(Today() - Last_Engagement_Date__c &gt;= 1095, 200,0)),0 )
+ Priority__c</formula>
    <inlineHelpText>Family Experience priority score.  Base priority + bonus for no/disengagement when 1 year after diagnosis</inlineHelpText>
    <label>Family Experience Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>