force-app/main/default/objects/Account/fields/Family_Experiences_12__c.field-meta.xml
<CustomField>
    <fullName>Family_Experiences_12__c</fullName>
    <label>Family Experiences &lt; 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>