force-app/main/default/objects/Account/fields/Family_Experiences_2__c.field-meta.xml
<CustomField>
    <fullName>Family_Experiences_2__c</fullName>
    <label>Family Experiences 2 +</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>