force-app/main/default/objects/Account/fields/Family_Fun_Day__c.field-meta.xml
<CustomField>
    <fullName>Family_Fun_Day__c</fullName>
    <label>Family Fun Day</label>
    <type>Date</type>
</CustomField>