force-app/main/default/objects/Account/fields/Family_Fun_Days_1_2__c.field-meta.xml
<CustomField>
    <fullName>Family_Fun_Days_1_2__c</fullName>
    <label>Family Fun Days 1 - 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>