force-app/main/default/objects/Account/fields/Family_Interests__c.field-meta.xml
<CustomField>
    <fullName>Family_Interests__c</fullName>
    <label>Family Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Theme Parks</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Crafts</fullName>
            </value>
            <value>
                <fullName>Science &amp; Education</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Live Entertainment</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Vehicles &amp; Remote Control</fullName>
            </value>
            <value>
                <fullName>Gaming &amp; Tech</fullName>
            </value>
            <value>
                <fullName>Toys &amp; Board Games</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellbeing</fullName>
            </value>
            <value>
                <fullName>Aquarium</fullName>
                <isActive>false</isActive>
                <label>Aquarium</label>
            </value>
            <value>
                <fullName>Bike</fullName>
                <isActive>false</isActive>
                <label>Bike</label>
            </value>
            <value>
                <fullName>Circus</fullName>
                <isActive>false</isActive>
                <label>Circus</label>
            </value>
            <value>
                <fullName>Dance</fullName>
                <isActive>false</isActive>
                <label>Dance</label>
            </value>
            <value>
                <fullName>Movies</fullName>
                <isActive>false</isActive>
                <label>Movies</label>
            </value>
            <value>
                <fullName>Music</fullName>
                <isActive>false</isActive>
                <label>Music</label>
            </value>
            <value>
                <fullName>Outdoors</fullName>
                <isActive>false</isActive>
                <label>Outdoors</label>
            </value>
            <value>
                <fullName>Sport - AFL</fullName>
                <isActive>false</isActive>
                <label>Sport - AFL</label>
            </value>
            <value>
                <fullName>Sport - Basketball</fullName>
                <isActive>false</isActive>
                <label>Sport - Basketball</label>
            </value>
            <value>
                <fullName>Sport - Cricket</fullName>
                <isActive>false</isActive>
                <label>Sport - Cricket</label>
            </value>
            <value>
                <fullName>Sport - Motor</fullName>
                <isActive>false</isActive>
                <label>Sport - Motor</label>
            </value>
            <value>
                <fullName>Sport - NRL</fullName>
                <isActive>false</isActive>
                <label>Sport - NRL</label>
            </value>
            <value>
                <fullName>Sport - Netball</fullName>
                <isActive>false</isActive>
                <label>Sport - Netball</label>
            </value>
            <value>
                <fullName>Sport - Other</fullName>
                <isActive>false</isActive>
                <label>Sport - Other</label>
            </value>
            <value>
                <fullName>Sport - Rugby Union</fullName>
                <isActive>false</isActive>
                <label>Sport - Rugby Union</label>
            </value>
            <value>
                <fullName>Sport - Soccer</fullName>
                <isActive>false</isActive>
                <label>Sport - Soccer</label>
            </value>
            <value>
                <fullName>Sport - Tennis</fullName>
                <isActive>false</isActive>
                <label>Sport - Tennis</label>
            </value>
            <value>
                <fullName>Theater</fullName>
                <isActive>false</isActive>
                <label>Theater</label>
            </value>
            <value>
                <fullName>Zoo</fullName>
                <isActive>false</isActive>
                <label>Zoo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>