force-app/main/default/objects/Account/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <inlineHelpText>Graduating = Families who&apos;s youngest child is turning 13 this year
Former = Graduated Families or Families who have ceased contact</inlineHelpText>
    <label>Family Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Patient - Alternate Household</fullName>
            </value>
            <value>
                <fullName>Restricted Family</fullName>
            </value>
            <value>
                <fullName>Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Offspring Family</fullName>
            </value>
            <value>
                <fullName>Offspring Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Test Family</fullName>
            </value>
            <value>
                <fullName>Graduating Patient Family</fullName>
            </value>
            <value>
                <fullName>Graduating Restricted Family</fullName>
            </value>
            <value>
                <fullName>Graduating Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Graduating Offspring Family</fullName>
            </value>
            <value>
                <fullName>Graduating Offspring Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Former Patient Family</fullName>
            </value>
            <value>
                <fullName>Former Bereaved Family</fullName>
            </value>
            <value>
                <fullName>Former Offspring Family</fullName>
            </value>
            <value>
                <fullName>Former Offspring Bereaved Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>