force-app/main/default/objects/Account/fields/familymemberreconsid__c.field-meta.xml
<CustomField>
    <fullName>familymemberreconsid__c</fullName>
    <label>familymemberreconsid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>