force-app/main/default/objects/Account/fields/Funeral_Costs__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Costs__c</fullName>
    <label>Funeral Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>