force-app/main/default/objects/Account/fields/Funraisin_Id__c.field-meta.xml
<CustomField>
    <fullName>Funraisin_Id__c</fullName>
    <label>C_Funraisin_Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>