force-app/main/default/objects/Account/fields/Gives_Anonymously__c.field-meta.xml
<CustomField>
    <fullName>Gives_Anonymously__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gives Anonymously</label>
    <type>Checkbox</type>
</CustomField>