force-app/main/default/objects/Account/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Families</relationshipLabel>
    <relationshipName>Hospital</relationshipName>
    <type>Lookup</type>
</CustomField>