force-app/main/default/objects/Account/fields/Image_Opt_In_Permission_Corporate_Child__c.field-meta.xml
<CustomField>
    <fullName>Image_Opt_In_Permission_Corporate_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For children in my household, I allow photos/videos to be shared with our corporate partners and major donors, to promote Camp Quality&apos;s charitable purposes and the partnership.</inlineHelpText>
    <label>Child Image Opt-In Permission Corporate</label>
    <type>Checkbox</type>
</CustomField>