force-app/main/default/objects/Account/fields/Is_MoveData__c.field-meta.xml
<CustomField>
    <fullName>Is_MoveData__c</fullName>
    <label>Is MoveData</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>