force-app/main/default/objects/Account/fields/Last_Aged_Camp_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Aged_Camp_Attended__c</fullName>
    <description>Roll up field on family attendance</description>
    <label>Last Aged Camp Attended</label>
    <type>Date</type>
</CustomField>